traefik.yaml
apiVersion: v1 
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort   # 👈 ADD THIS LINE
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 80
      targetPort: 80
