ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skymap
  namespace: skymap
spec:
  ingressClassName: traefik
  rules:
    - host: skymap.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 4000
